--- a/04_ai.md
+++ b/04_ai.md
@@ -37,7 +37,7 @@
 - [데이터]()
 
 (Computer Vision)
-- [papers with code](https://github.com/paperswithcode)에서 모델 찾아 학습하기
+- [papers with code -> Huggingface Daily Papers](https://huggingface.co/papers)에서 모델 찾아 학습하기
 
 (NLP)
 - []()
