--- a/cogito30/202508.md
+++ b/cogito30/202508.md
@@ -43,7 +43,7 @@
 08.18 [!] | 08.19 [!] | 08.20 [!] | 08.21 [!] | 08.22 [!] || 08.23 [ ] | 08.24 [ ]
 08.25 [!] | 08.26 [!] | 08.27 [!] | 08.28 [!] | 08.29 [!] || 08.30 [ ] | 08.31 [ ]
 
-- [ ] 1주차: 
+- [ ] 1주차: 프론트엔드 성능 최적화 가이드 + PowerPoint
 - [ ] 2주차: 
 - [ ] 3주차: 
 - [ ] 4주차: 
