--- a/cogito30/202508.md
+++ b/cogito30/202508.md
@@ -11,10 +11,12 @@
 - 목표: TOEIC(LC) Part1-Part4
 - 결과: O() X() Total(20)
 
-08.04 [ ] | 08.05 [ ] | 08.06 [ ] | 08.07 [ ] | 08.08 [ ] || 08.09 [ ] | 08.10 [ ]
-08.11 [ ] | 08.12 [ ] | 08.13 [ ] | 08.14 [ ] | 08.15 [ ] || 08.16 [ ] | 08.17 [ ]
-08.18 [ ] | 08.19 [ ] | 08.20 [ ] | 08.21 [ ] | 08.22 [ ] || 08.23 [ ] | 08.24 [ ]
-08.25 [ ] | 08.26 [ ] | 08.27 [ ] | 08.28 [ ] | 08.29 [ ] || 08.30 [ ] | 08.31 [ ]
+| Mon | Tue | Wed | Thu | Fri | Sat | Sun |
+| :---: | :---: | :---: | :---: | :---: | :---: | :---: |
+08.04 [ ] | 08.05 [ ] | 08.06 [ ] | 08.07 [ ] | 08.08 [ ] | 08.09 [ ] | 08.10 [ ]
+08.11 [ ] | 08.12 [ ] | 08.13 [ ] | 08.14 [ ] | 08.15 [ ] | 08.16 [ ] | 08.17 [ ]
+08.18 [ ] | 08.19 [ ] | 08.20 [ ] | 08.21 [ ] | 08.22 [ ] | 08.23 [ ] | 08.24 [ ]
+08.25 [ ] | 08.26 [ ] | 08.27 [ ] | 08.28 [ ] | 08.29 [ ] | 08.30 [ ] | 08.31 [ ]
 
 - [ ] 1주차: Part1(Unit01-Unit02) + Part2(Unit03-Unit06)
 - [ ] 2주차: Part3(Unit07-Unit10)
@@ -25,10 +27,13 @@
 [기간: 08.04-08.31]
 - 목표: Java 코딩테스트
 - 결과: O() X() Total(20)
-08.04 [ ] | 08.05 [ ] | 08.06 [ ] | 08.07 [ ] | 08.08 [ ] || 08.09 [!] | 08.10 [!]
-08.11 [ ] | 08.12 [ ] | 08.13 [ ] | 08.14 [ ] | 08.15 [ ] || 08.16 [!] | 08.17 [!]
-08.18 [ ] | 08.19 [ ] | 08.20 [ ] | 08.21 [ ] | 08.22 [ ] || 08.23 [!] | 08.24 [!]
-08.25 [ ] | 08.26 [ ] | 08.27 [ ] | 08.28 [ ] | 08.29 [ ] || 08.30 [!] | 08.31 [!]
+
+| Mon | Tue | Wed | Thu | Fri | Sat | Sun |
+| :---: | :---: | :---: | :---: | :---: | :---: | :---: |
+08.04 [ ] | 08.05 [ ] | 08.06 [ ] | 08.07 [ ] | 08.08 [ ] | 08.09 [!] | 08.10 [!]
+08.11 [ ] | 08.12 [ ] | 08.13 [ ] | 08.14 [ ] | 08.15 [ ] | 08.16 [!] | 08.17 [!]
+08.18 [ ] | 08.19 [ ] | 08.20 [ ] | 08.21 [ ] | 08.22 [ ] | 08.23 [!] | 08.24 [!]
+08.25 [ ] | 08.26 [ ] | 08.27 [ ] | 08.28 [ ] | 08.29 [ ] | 08.30 [!] | 08.31 [!]
 
 - [ ] 1주차: Programmers(Java) Lv2 1문제씩
 - [ ] 2주차: Programmers(Java) Lv2 1문제씩
@@ -39,10 +44,13 @@
 [기간: 08.04-08.31]
 - 목표: FrontEnd 개별 프로젝트
 - 결과: O() X() Total(8)
-08.04 [!] | 08.05 [!] | 08.06 [!] | 08.07 [!] | 08.08 [!] || 08.09 [ ] | 08.10 [ ]
-08.11 [!] | 08.12 [!] | 08.13 [!] | 08.14 [!] | 08.15 [!] || 08.16 [ ] | 08.17 [ ]
-08.18 [!] | 08.19 [!] | 08.20 [!] | 08.21 [!] | 08.22 [!] || 08.23 [ ] | 08.24 [ ]
-08.25 [!] | 08.26 [!] | 08.27 [!] | 08.28 [!] | 08.29 [!] || 08.30 [ ] | 08.31 [ ]
+
+| Mon | Tue | Wed | Thu | Fri | Sat | Sun |
+| :---: | :---: | :---: | :---: | :---: | :---: | :---: |
+08.04 [!] | 08.05 [!] | 08.06 [!] | 08.07 [!] | 08.08 [!] | 08.09 [ ] | 08.10 [ ]
+08.11 [!] | 08.12 [!] | 08.13 [!] | 08.14 [!] | 08.15 [!] | 08.16 [ ] | 08.17 [ ]
+08.18 [!] | 08.19 [!] | 08.20 [!] | 08.21 [!] | 08.22 [!] | 08.23 [ ] | 08.24 [ ]
+08.25 [!] | 08.26 [!] | 08.27 [!] | 08.28 [!] | 08.29 [!] | 08.30 [ ] | 08.31 [ ]
 
 - [ ] 1주차: 프론트엔드 성능 최적화 가이드 + PowerPoint
 - [ ] 2주차: 
