--- a/04_ai.md
+++ b/04_ai.md
@@ -28,6 +28,7 @@
 - [Programmers](https://school.programmers.co.kr/learn/challenges?order=recent)에서 Lv3까지 순서대로 풀기
 
 (AI Basic)
+- [서울대 이준석 교수님의 강의](https://www.youtube.com/@LeeJoonseok)로 머신러닝 및 딥러닝 이론 학습
 - [데이터사이언스스쿨](https://datascienceschool.net/intro.html)로 기본이론 학습
 - 밑바닥부터 시작하는 딥러닝1-5 교재로 기본이론 학습
 - [boostcourse](https://www.boostcourse.org/opencourse)에서 인공지능 기본기 학습
@@ -37,6 +38,7 @@
 - []()
 
 (Computer Vision)
+- [서울대 이준석 교수님의 강의](https://www.youtube.com/@LeeJoonseok)로 컴퓨터 비전 학습
 - [papers with code -> Huggingface Daily Papers](https://huggingface.co/papers)에서 모델 찾아 학습하기
 
 (NLP)
