--- a/04_ai.md
+++ b/04_ai.md
@@ -31,6 +31,7 @@
 - [서울대 이준석 교수님의 강의](https://www.youtube.com/@LeeJoonseok)로 머신러닝 및 딥러닝 이론 학습
 - [데이터사이언스스쿨](https://datascienceschool.net/intro.html)로 기본이론 학습
 - 밑바닥부터 시작하는 딥러닝1-5 교재로 기본이론 학습
+- [Dive into Deep Learning](https://d2l.ai/)으로 이론 학습
 - [boostcourse](https://www.boostcourse.org/opencourse)에서 인공지능 기본기 학습
 - [Kaggle Learn](https://www.kaggle.com/)에서 기본 학습
 
