--- a/cogito30/202508.md
+++ b/cogito30/202508.md
@@ -18,12 +18,28 @@
 08.18 [ ] | 08.19 [ ] | 08.20 [ ] | 08.21 [ ] | 08.22 [ ] | 08.23 [ ] | 08.24 [ ]
 08.25 [ ] | 08.26 [ ] | 08.27 [ ] | 08.28 [ ] | 08.29 [ ] | 08.30 [ ] | 08.31 [ ]
 
-- [ ] 1주차: Part1(Unit01-Unit02) + Part2(Unit03-Unit06)
+- [ ] 1주차: Part2(Unit03-Unit06)
 - [ ] 2주차: Part3(Unit07-Unit10)
 - [ ] 3주차: Part4(Unit11-Unit14)
 - [ ] 4주차: ETS ACTUA TEST(Part1-Part4)
 
 ## 주중
+[기간: 08.04-08.31]
+- 목표: 이것이 백엔드 개발이다
+- 결과: O() X() Total(20)
+
+| Mon | Tue | Wed | Thu | Fri | Sat | Sun |
+| :---: | :---: | :---: | :---: | :---: | :---: | :---: |
+08.04 [ ] | 08.05 [ ] | 08.06 [ ] | 08.07 [ ] | 08.08 [ ] | 08.09 [!] | 08.10 [!]
+08.11 [ ] | 08.12 [ ] | 08.13 [ ] | 08.14 [ ] | 08.15 [ ] | 08.16 [!] | 08.17 [!]
+08.18 [ ] | 08.19 [ ] | 08.20 [ ] | 08.21 [ ] | 08.22 [ ] | 08.23 [!] | 08.24 [!]
+08.25 [ ] | 08.26 [ ] | 08.27 [ ] | 08.28 [ ] | 08.29 [ ] | 08.30 [!] | 08.31 [!]
+
+- [ ] 1주차: 스프링 핵심원리 - 기본편(s7-s10) / 이것이 백엔드 개발이다(ch01-ch08)
+- [ ] 2주차: 이것이 백엔드 개발이다(ch09-ch14)
+- [ ] 3주차: boostcourse(풀스택) 웹/앱 개발 예약 서비스 1
+- [ ] 4주차: boostcourse(풀스택) 웹/앱 개발 예약 서비스 2, 3
+
 [기간: 08.04-08.31]
 - 목표: Java 코딩테스트
 - 결과: O() X() Total(20)
@@ -52,7 +68,7 @@
 08.18 [!] | 08.19 [!] | 08.20 [!] | 08.21 [!] | 08.22 [!] | 08.23 [ ] | 08.24 [ ]
 08.25 [!] | 08.26 [!] | 08.27 [!] | 08.28 [!] | 08.29 [!] | 08.30 [ ] | 08.31 [ ]
 
-- [ ] 1주차: 프론트엔드 성능 최적화 가이드 + PowerPoint
-- [ ] 2주차: 
-- [ ] 3주차: 
-- [ ] 4주차: 
+- [ ] 1주차: 프론트엔드 성능 최적화 가이드 + 영어학습을 위한 LC 자동 스크립트 생성
+- [ ] 2주차: 프론트엔드 성능 최적화 가이드 + 뮤직플레이어
+- [ ] 3주차: 프론트엔드 성능 최적화 가이드 + 동영상플레이어
+- [ ] 4주차: 프론트엔드 성능 최적화 가이드 + 동영상 편집기
