--- a/cogito30/202508.md
+++ b/cogito30/202508.md
@@ -68,7 +68,7 @@
 08.18 [!] | 08.19 [!] | 08.20 [!] | 08.21 [!] | 08.22 [!] | 08.23 [ ] | 08.24 [ ]
 08.25 [!] | 08.26 [!] | 08.27 [!] | 08.28 [!] | 08.29 [!] | 08.30 [ ] | 08.31 [ ]
 
-- [ ] 1주차: 프론트엔드 성능 최적화 가이드 + 영어학습을 위한 LC 자동 스크립트 생성
-- [ ] 2주차: 프론트엔드 성능 최적화 가이드 + 뮤직플레이어
-- [ ] 3주차: 프론트엔드 성능 최적화 가이드 + 동영상플레이어
+- [ ] 1주차: 프론트엔드 성능 최적화 가이드 + 노마드코더(줌 클론코딩)
+- [ ] 2주차: 프론트엔드 성능 최적화 가이드 + 영어학습을 위한 LC 자동 스크립트 생성
+- [ ] 3주차: 프론트엔드 성능 최적화 가이드 + 노마드코더(NextJS 시작하기)
 - [ ] 4주차: 프론트엔드 성능 최적화 가이드 + 동영상 편집기
