--- a/cogito30/2025/2025.md
+++ b/cogito30/2025/2025.md
@@ -14,7 +14,8 @@
 
 ## Plan
 (영어)
-- [ ] (Video) 시계토끼제니쌤 만능문장
+- [X] (Video) 시계토끼제니쌤 만능문장
+- [X] (Video) 시계토끼제니쌤 파트별 분석
 - [ ] (Text) 토익라이팅 기출 공식대비서
 - [ ] (Text) ETS 토익 단기공략 750+
 
