--- a/cogito30/2025/202509.md
+++ b/cogito30/2025/202509.md
@@ -1,28 +1,31 @@
-# 2025.08
-- 주중: 영어/코딩테스트
+# 2025.09
+- 주중: TOEIC/BackEnd
 - 주말: FrontEnd 프로젝트
 
 ## 공통
-[기간: 08.04-08.31]
-- 목표: ETS 토익 단기공략 750+(Part1-Part4)
+[기간: 09.01-09.28]
+- 목표: ETS 토익 단기공략 750+(Part5-Part7)
 - 결과: O() X() Total(20)
 
 | Mon | Tue | Wed | Thu | Fri | Sat | Sun |
 | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
-08.04 [O] | 08.05 [O] | 08.06 [X] | 08.07 [ ] | 08.08 [ ] | 08.09 [ ] | 08.10 [ ]
-08.11 [ ] | 08.12 [ ] | 08.13 [ ] | 08.14 [ ] | 08.15 [ ] | 08.16 [ ] | 08.17 [ ]
-08.18 [ ] | 08.19 [ ] | 08.20 [ ] | 08.21 [ ] | 08.22 [ ] | 08.23 [ ] | 08.24 [ ]
-08.25 [ ] | 08.26 [ ] | 08.27 [ ] | 08.28 [ ] | 08.29 [ ] | 08.30 [ ] | 08.31 [ ]
+| 09.01 [ ] | 09.02 [ ] | 09.03 [ ] | 09.04 [ ] | 09.05 [ ] | 09.06 [!] | 09.07 [!] | 
+| 09.08 [ ] | 09.09 [ ] | 09.10 [ ] | 09.11 [ ] | 09.12 [ ] | 09.13 [!] | 09.14 [!] | 
+| 09.15 [ ] | 09.16 [ ] | 09.17 [ ] | 09.18 [ ] | 09.19 [ ] | 09.20 [!] | 09.21 [!] | 
+| 09.22 [ ] | 09.23 [ ] | 09.24 [ ] | 09.25 [ ] | 09.26 [ ] | 09.27 [!] | 09.28 [!] | 
 
-- [ ] 1주차: Part2(Unit03-Unit06)
-- [ ] 2주차: Part3(Unit07-Unit10)
-- [ ] 3주차: Part4(Unit11-Unit14)
-- [ ] 4주차: ETS ACTUA TEST(Part1-Part4)
+- [ ] 1주차: Part7(Unit17-Unit20)
+- [ ] 2주차: Part5&6(Unit01-Unit10)
+- [ ] 3주차: Part5&6(Unit11-Unit16)
+- [ ] 4주차: ETS ACTUAL TEST(Part5-Part7)
 
 ## 주중
 [기간: 09.01-09.28]
-- 목표: 
+- 목표: BackEnd 서버 구현하기
 - 결과: O() X() Total(20)
+
+| Mon | Tue | Wed | Thu | Fri | Sat | Sun |
+| :---: | :---: | :---: | :---: | :---: | :---: | :---: |
 | 09.01 [ ] | 09.02 [ ] | 09.03 [ ] | 09.04 [ ] | 09.05 [ ] | 09.06 [!] | 09.07 [!] | 
 | 09.08 [ ] | 09.09 [ ] | 09.10 [ ] | 09.11 [ ] | 09.12 [ ] | 09.13 [!] | 09.14 [!] | 
 | 09.15 [ ] | 09.16 [ ] | 09.17 [ ] | 09.18 [ ] | 09.19 [ ] | 09.20 [!] | 09.21 [!] | 
@@ -34,28 +37,34 @@
 - [ ] 4주차: 
 
 [기간: 09.01-09.28]
-- 목표: 
+- 목표: 코딩테스트 1문제씩 풀기
 - 결과: O() X() Total(20)
-09.01 [ ] | 09.02 [ ] | 09.03 [ ] | 09.04 [ ] | 09.05 [ ] || 09.06 [!] | 09.07 [!]
-09.08 [ ] | 09.09 [ ] | 09.10 [ ] | 09.11 [ ] | 09.12 [ ] || 09.13 [!] | 09.14 [!]
-09.15 [ ] | 09.16 [ ] | 09.17 [ ] | 09.18 [ ] | 09.19 [ ] || 09.20 [!] | 09.21 [!]
-09.22 [ ] | 09.23 [ ] | 09.24 [ ] | 09.25 [ ] | 09.26 [ ] || 09.27 [!] | 09.28 [!]
+
+| Mon | Tue | Wed | Thu | Fri | Sat | Sun |
+| :---: | :---: | :---: | :---: | :---: | :---: | :---: |
+| 09.01 [ ] | 09.02 [ ] | 09.03 [ ] | 09.04 [ ] | 09.05 [ ] | 09.06 [!] | 09.07 [!] | 
+| 09.08 [ ] | 09.09 [ ] | 09.10 [ ] | 09.11 [ ] | 09.12 [ ] | 09.13 [!] | 09.14 [!] | 
+| 09.15 [ ] | 09.16 [ ] | 09.17 [ ] | 09.18 [ ] | 09.19 [ ] | 09.20 [!] | 09.21 [!] | 
+| 09.22 [ ] | 09.23 [ ] | 09.24 [ ] | 09.25 [ ] | 09.26 [ ] | 09.27 [!] | 09.28 [!] | 
+
+- [ ] 1주차: Programmers(Java) Lv2 1문제씩 x 4일 + 복습 x 1일
+- [ ] 2주차: Programmers(Java) Lv2 1문제씩 x 4일 + 복습 x 1일
+- [ ] 3주차: Programmers(Java) Lv2 1문제씩 x 4일 + 복습 x 1일
+- [ ] 4주차: Programmers(Java) Lv2 1문제씩 x 4일 + 복습 x 1일
+
+## 주말
+[기간: 09.01-09.28]
+- 목표: 개별 프로젝트 및 보충
+- 결과: O() X() Total(20)
+
+| Mon | Tue | Wed | Thu | Fri | Sat | Sun |
+| :---: | :---: | :---: | :---: | :---: | :---: | :---: |
+| 09.01 [!] | 09.02 [!] | 09.03 [!] | 09.04 [!] | 09.05 [!] | 09.06 [ ] | 09.07 [ ] | 
+| 09.08 [!] | 09.09 [!] | 09.10 [!] | 09.11 [!] | 09.12 [!] | 09.13 [ ] | 09.14 [ ] | 
+| 09.15 [!] | 09.16 [!] | 09.17 [!] | 09.18 [!] | 09.19 [!] | 09.20 [ ] | 09.21 [ ] | 
+| 09.22 [!] | 09.23 [!] | 09.24 [!] | 09.25 [!] | 09.26 [!] | 09.27 [ ] | 09.28 [ ] | 
 
 - [ ] 1주차: 
 - [ ] 2주차: 
 - [ ] 3주차: 
-- [ ] 4주차: 
-
-## 주말
-[기간: 09.01-09.28]
-- 목표: 
-- 결과: O() X() Total(8)
-09.01 [!] | 09.02 [!] | 09.03 [!] | 09.04 [!] | 09.05 [!] || 09.06 [ ] | 09.07 [ ]
-09.08 [!] | 09.09 [!] | 09.10 [!] | 09.11 [!] | 09.12 [!] || 09.13 [ ] | 09.14 [ ]
-09.15 [!] | 09.16 [!] | 09.17 [!] | 09.18 [!] | 09.19 [!] || 09.20 [ ] | 09.21 [ ]
-09.22 [!] | 09.23 [!] | 09.24 [!] | 09.25 [!] | 09.26 [!] || 09.27 [ ] | 09.28 [ ]
-
-- [ ] 1주차: 
-- [ ] 2주차: 
-- [ ] 3주차: 토익 시험
 - [ ] 4주차: 
