--- a/cogito30/2025/202508.md
+++ b/cogito30/2025/202508.md
@@ -1,25 +1,24 @@
 # 2025.08
-- 주중: 영어/코딩테스트
-- 주말: FrontEnd 프로젝트
+- 주중: 영어/BackEnd
+- 주말: 코딩테스트
 
-## 공통
+## 주중
 [기간: 08.04-08.31]
 - 목표: ETS 토익 단기공략 750+(Part1-Part4)
 - 결과: O() X() Total(20)
 
 | Mon | Tue | Wed | Thu | Fri | Sat | Sun |
 | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
-08.04 [O] | 08.05 [O] | 08.06 [X] | 08.07 [ ] | 08.08 [ ] | 08.09 [ ] | 08.10 [ ]
-08.11 [ ] | 08.12 [ ] | 08.13 [ ] | 08.14 [ ] | 08.15 [ ] | 08.16 [ ] | 08.17 [ ]
-08.18 [ ] | 08.19 [ ] | 08.20 [ ] | 08.21 [ ] | 08.22 [ ] | 08.23 [ ] | 08.24 [ ]
-08.25 [ ] | 08.26 [ ] | 08.27 [ ] | 08.28 [ ] | 08.29 [ ] | 08.30 [ ] | 08.31 [ ]
+08.04 [O] | 08.05 [O] | 08.06 [X] | 08.07 [ ] | 08.08 [ ] | 08.09 [!] | 08.10 [!]
+08.11 [ ] | 08.12 [ ] | 08.13 [ ] | 08.14 [ ] | 08.15 [ ] | 08.16 [!] | 08.17 [!]
+08.18 [ ] | 08.19 [ ] | 08.20 [ ] | 08.21 [ ] | 08.22 [ ] | 08.23 [!] | 08.24 [!]
+08.25 [ ] | 08.26 [ ] | 08.27 [ ] | 08.28 [ ] | 08.29 [ ] | 08.30 [!] | 08.31 [!]
 
 - [ ] 1주차: Part2(Unit03-Unit06)
 - [ ] 2주차: Part3(Unit07-Unit10)
 - [ ] 3주차: Part4(Unit11-Unit14)
 - [ ] 4주차: ETS ACTUA TEST(Part1-Part4)
 
-## 주중
 [기간: 08.04-08.31]
 - 목표: 김영한의 스프링 핵심원리 / 이것이 백엔드 개발이다 / boostcourse(풀스택)
 - 결과: O() X() Total(20)
@@ -36,22 +35,6 @@
 - [ ] 3주차: boostcourse(풀스택) 웹/앱 개발 예약 서비스 1
 - [ ] 4주차: boostcourse(풀스택) 웹/앱 개발 예약 서비스 2, 3
 
-[기간: 08.04-08.31]
-- 목표: Java 코딩테스트
-- 결과: O() X() Total(20)
-
-| Mon | Tue | Wed | Thu | Fri | Sat | Sun |
-| :---: | :---: | :---: | :---: | :---: | :---: | :---: |
-08.04 [ ] | 08.05 [ ] | 08.06 [ ] | 08.07 [ ] | 08.08 [ ] | 08.09 [!] | 08.10 [!]
-08.11 [ ] | 08.12 [ ] | 08.13 [ ] | 08.14 [ ] | 08.15 [ ] | 08.16 [!] | 08.17 [!]
-08.18 [ ] | 08.19 [ ] | 08.20 [ ] | 08.21 [ ] | 08.22 [ ] | 08.23 [!] | 08.24 [!]
-08.25 [ ] | 08.26 [ ] | 08.27 [ ] | 08.28 [ ] | 08.29 [ ] | 08.30 [!] | 08.31 [!]
-
-- [ ] 1주차: Programmers(Java) Lv2 1문제씩 x 4일 + 복습 x 1일
-- [ ] 2주차: Programmers(Java) Lv2 1문제씩 x 4일 + 복습 x 1일
-- [ ] 3주차: Programmers(Java) Lv2 1문제씩 x 4일 + 복습 x 1일
-- [ ] 4주차: Programmers(Java) Lv2 1문제씩 x 4일 + 복습 x 1일
-
 ## 주말
 [기간: 08.04-08.31]
 - 목표: 프론트엔드 성능 최적화 가이드 / 노마드 코더 강의 / 개별 프로젝트
@@ -64,7 +47,7 @@
 08.18 [!] | 08.19 [!] | 08.20 [!] | 08.21 [!] | 08.22 [!] | 08.23 [ ] | 08.24 [ ]
 08.25 [!] | 08.26 [!] | 08.27 [!] | 08.28 [!] | 08.29 [!] | 08.30 [ ] | 08.31 [ ]
 
-- [ ] 1주차: 프론트엔드 성능 최적화 가이드 + 노마드코더(줌 클론코딩)
-- [ ] 2주차: 프론트엔드 성능 최적화 가이드 + 영어학습을 위한 LC 자동 스크립트 생성
-- [ ] 3주차: 프론트엔드 성능 최적화 가이드 + 노마드코더(NextJS 시작하기)
-- [ ] 4주차: 프론트엔드 성능 최적화 가이드
+- [ ] 1주차: Programmers(Lv2) 5문제 + 프론트엔드 성능 최적화 가이드 + 노마드코더(줌 클론코딩)
+- [ ] 2주차: Programmers(Lv2) 5문제+ 프론트엔드 성능 최적화 가이드 + 영어학습을 위한 LC 자동 스크립트 생성
+- [ ] 3주차: Programmers(Lv2) 5문제 + 프론트엔드 성능 최적화 가이드 + 노마드코더(NextJS 시작하기)
+- [ ] 4주차: Programmers(Lv2) 5문제 + 프론트엔드 성능 최적화 가이드
