--- a/cogito30/2025/202509.md
+++ b/cogito30/2025/202509.md
@@ -1,6 +1,6 @@
 # 2025.09
 - 주중: TOEIC/BackEnd
-- 주말: FrontEnd 프로젝트
+- 주말: 코딩테스트
 
 ## 공통
 [기간: 09.01-09.28]
@@ -36,25 +36,9 @@
 - [ ] 3주차: 
 - [ ] 4주차: 
 
-[기간: 09.01-09.28]
-- 목표: 코딩테스트 1문제씩 풀기
-- 결과: O() X() Total(20)
-
-| Mon | Tue | Wed | Thu | Fri | Sat | Sun |
-| :---: | :---: | :---: | :---: | :---: | :---: | :---: |
-| 09.01 [ ] | 09.02 [ ] | 09.03 [ ] | 09.04 [ ] | 09.05 [ ] | 09.06 [!] | 09.07 [!] | 
-| 09.08 [ ] | 09.09 [ ] | 09.10 [ ] | 09.11 [ ] | 09.12 [ ] | 09.13 [!] | 09.14 [!] | 
-| 09.15 [ ] | 09.16 [ ] | 09.17 [ ] | 09.18 [ ] | 09.19 [ ] | 09.20 [!] | 09.21 [!] | 
-| 09.22 [ ] | 09.23 [ ] | 09.24 [ ] | 09.25 [ ] | 09.26 [ ] | 09.27 [!] | 09.28 [!] | 
-
-- [ ] 1주차: Programmers(Java) Lv2 1문제씩 x 4일 + 복습 x 1일
-- [ ] 2주차: Programmers(Java) Lv2 1문제씩 x 4일 + 복습 x 1일
-- [ ] 3주차: Programmers(Java) Lv2 1문제씩 x 4일 + 복습 x 1일
-- [ ] 4주차: Programmers(Java) Lv2 1문제씩 x 4일 + 복습 x 1일
-
 ## 주말
 [기간: 09.01-09.28]
-- 목표: 개별 프로젝트 및 보충
+- 목표: 코딩테스트 / 개별 프로젝트
 - 결과: O() X() Total(20)
 
 | Mon | Tue | Wed | Thu | Fri | Sat | Sun |
@@ -64,7 +48,7 @@
 | 09.15 [!] | 09.16 [!] | 09.17 [!] | 09.18 [!] | 09.19 [!] | 09.20 [ ] | 09.21 [ ] | 
 | 09.22 [!] | 09.23 [!] | 09.24 [!] | 09.25 [!] | 09.26 [!] | 09.27 [ ] | 09.28 [ ] | 
 
-- [ ] 1주차: 
-- [ ] 2주차: 
-- [ ] 3주차: 
-- [ ] 4주차: 
+- [ ] 1주차: Programmers(Java) Lv2 5문제
+- [ ] 2주차: Programmers(Java) Lv2 5문제
+- [ ] 3주차: Programmers(Java) Lv2 5문제
+- [ ] 4주차: Programmers(Java) Lv2 5문제
