--- a/04_ai.md
+++ b/04_ai.md
@@ -12,7 +12,7 @@
 | SQLD | 데이터분석을 위한 데이터 조회 SQL 인증 |
 | ADsP | 데이터분석에 필요한 기본 이론 인증 |
 | **빅데이터분석기사** | 데이터분석에 필요한 기본 이론 및 코드 구현 인증 |
-| AICE(PROFESSIONAL) | KT 주관 AI 인증 자격증 |
+| AICE(ASSOCIATE) | KT 주관 AI 국가공인 자격증 |
 | ADP | 데이터분석 심화 인증 |
 - **굵은 글씨** 표시가 있는 것은 최소 필수 조건
 
