--- a/04_ai.md
+++ b/04_ai.md
@@ -34,6 +34,8 @@
 - [Dive into Deep Learning](https://d2l.ai/)으로 이론 학습
 - [boostcourse](https://www.boostcourse.org/opencourse)에서 인공지능 기본기 학습
 - [Kaggle Learn](https://www.kaggle.com/)에서 기본 학습
+- [AI-Hub](https://www.aihub.or.kr/)
+- [DACON](https://dacon.io/)
 
 (데이터엔지니어링)
 - []()
