--- a/04_ai.md
+++ b/04_ai.md
@@ -36,6 +36,8 @@
 - [Kaggle Learn](https://www.kaggle.com/)에서 기본 학습
 - [AI-Hub](https://www.aihub.or.kr/)
 - [DACON](https://dacon.io/)
+- [Machine Learning](https://developers.google.com/machine-learning/crash-course)
+
 
 (데이터엔지니어링)
 - []()
