--- a/cogito30/2025/202508.md
+++ b/cogito30/2025/202508.md
@@ -9,7 +9,7 @@
 
 | Mon | Tue | Wed | Thu | Fri | Sat | Sun |
 | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
-08.04 [O] | 08.05 [O] | 08.06 [X] | 08.07 [ ] | 08.08 [ ] | 08.09 [!] | 08.10 [!]
+08.04 [O] | 08.05 [O] | 08.06 [X] | 08.07 [X] | 08.08 [O] | 08.09 [!] | 08.10 [!]
 08.11 [ ] | 08.12 [ ] | 08.13 [ ] | 08.14 [ ] | 08.15 [ ] | 08.16 [!] | 08.17 [!]
 08.18 [ ] | 08.19 [ ] | 08.20 [ ] | 08.21 [ ] | 08.22 [ ] | 08.23 [!] | 08.24 [!]
 08.25 [ ] | 08.26 [ ] | 08.27 [ ] | 08.28 [ ] | 08.29 [ ] | 08.30 [!] | 08.31 [!]
@@ -25,19 +25,19 @@
 
 | Mon | Tue | Wed | Thu | Fri | Sat | Sun |
 | :---: | :---: | :---: | :---: | :---: | :---: | :---: |
-08.04 [ ] | 08.05 [ ] | 08.06 [ ] | 08.07 [ ] | 08.08 [ ] | 08.09 [!] | 08.10 [!]
+08.04 [O] | 08.05 [O] | 08.06 [O] | 08.07 [O] | 08.08 [O] | 08.09 [!] | 08.10 [!]
 08.11 [ ] | 08.12 [ ] | 08.13 [ ] | 08.14 [ ] | 08.15 [ ] | 08.16 [!] | 08.17 [!]
 08.18 [ ] | 08.19 [ ] | 08.20 [ ] | 08.21 [ ] | 08.22 [ ] | 08.23 [!] | 08.24 [!]
 08.25 [ ] | 08.26 [ ] | 08.27 [ ] | 08.28 [ ] | 08.29 [ ] | 08.30 [!] | 08.31 [!]
 
 - [ ] 1주차: 스프링 핵심원리 - 기본편(s7-s10) / 이것이 백엔드 개발이다(ch01-ch08)
-- [ ] 2주차: 이것이 백엔드 개발이다(ch09-ch14)
-- [ ] 3주차: boostcourse(풀스택) 웹/앱 개발 예약 서비스 1
-- [ ] 4주차: boostcourse(풀스택) 웹/앱 개발 예약 서비스 2, 3
+- [ ] 2주차: 패스트캠퍼스(Spring) 스프링 입문
+- [ ] 3주차: 패스트캠퍼스(Spring) JPA
+- [ ] 4주차: 패스트캠퍼스(Spring) JPA
 
 ## 주말
 [기간: 08.04-08.31]
-- 목표: 프론트엔드 성능 최적화 가이드 / 노마드 코더 강의 / 개별 프로젝트
+- 목표: IT 도서 읽기
 - 결과: O() X() Total(8)
 
 | Mon | Tue | Wed | Thu | Fri | Sat | Sun |
@@ -47,7 +47,7 @@
 08.18 [!] | 08.19 [!] | 08.20 [!] | 08.21 [!] | 08.22 [!] | 08.23 [ ] | 08.24 [ ]
 08.25 [!] | 08.26 [!] | 08.27 [!] | 08.28 [!] | 08.29 [!] | 08.30 [ ] | 08.31 [ ]
 
-- [ ] 1주차: Programmers(Lv2) 5문제 + 프론트엔드 성능 최적화 가이드 + 노마드코더(줌 클론코딩)
-- [ ] 2주차: Programmers(Lv2) 5문제+ 프론트엔드 성능 최적화 가이드 + 영어학습을 위한 LC 자동 스크립트 생성
-- [ ] 3주차: Programmers(Lv2) 5문제 + 프론트엔드 성능 최적화 가이드 + 노마드코더(NextJS 시작하기)
-- [ ] 4주차: Programmers(Lv2) 5문제 + 프론트엔드 성능 최적화 가이드
+- [ ] 1주차: 프론트엔드 성능 최적화 가이드
+- [ ] 2주차: 프로젝트로 배우는 데이터베이스 설계
+- [ ] 3주차: 프로젝트로 배우는 데이터베이스 설계
+- [ ] 4주차: 프로젝트로 배우는 데이터베이스 설계
