--- a/cogito30/2025/202509.md
+++ b/cogito30/2025/202509.md
@@ -48,7 +48,7 @@
 | 09.15 [!] | 09.16 [!] | 09.17 [!] | 09.18 [!] | 09.19 [!] | 09.20 [ ] | 09.21 [ ] | 
 | 09.22 [!] | 09.23 [!] | 09.24 [!] | 09.25 [!] | 09.26 [!] | 09.27 [ ] | 09.28 [ ] | 
 
-- [ ] 1주차: Programmers(Java) Lv2 5문제
-- [ ] 2주차: Programmers(Java) Lv2 5문제
+- [ ] 1주차: 웹 디자인 교과서
+- [ ] 2주차: 웹 사이트 기획 입문
 - [ ] 3주차: Programmers(Java) Lv2 5문제
-- [ ] 4주차: Programmers(Java) Lv2 5문제
+- [ ] 4주차: 가상면접 사례로 배우는 대규모 시스템 설계
