--- a/cogito30/2025/202508.md
+++ b/cogito30/2025/202508.md
@@ -48,6 +48,6 @@
 08.25 [!] | 08.26 [!] | 08.27 [!] | 08.28 [!] | 08.29 [!] | 08.30 [ ] | 08.31 [ ]
 
 - [ ] 1주차: 프론트엔드 성능 최적화 가이드
-- [ ] 2주차: 프로젝트로 배우는 데이터베이스 설계
+- [ ] 2주차: 이것이 백엔드 개발이다
 - [ ] 3주차: 프로젝트로 배우는 데이터베이스 설계
 - [ ] 4주차: 프로젝트로 배우는 데이터베이스 설계
