--- a/04_ai.md
+++ b/04_ai.md
@@ -18,38 +18,100 @@
 
 
 ## 학습방법
-(Python)
-- [점프 투 파이썬](https://wikidocs.net/book/1)으로 Python 기본문법 학습
-- [코딩도장(파이썬)](https://dojang.io/course/view.php?id=7)으로 Python 기본문법 학습
+```
+1) 프로그램 언어 기본 문법 학습. 주요 개념, 키워드 암기
+2) 알고리즘 학습후 코딩테스트를 통해 점검
+3) 인공지능에 해당하는 기본 이론 학습
+4) 프레임워크(PyTorch)를 하나 선정하여 논문을 읽고 모델을 구현하는 프로젝트 진행. 상세한 구현은 검색을 해가며 진행하고 주요 개념/키워드만 기억할 것
+```
+#### 프로그래밍언어
+```
+1) 언어별 특징 확인
+2) 개발환경 설정: VisualStudio / VSCode / CLion / PyCharm
+3) 기본 문법: 변수, 자료형, 상수 / 제어문(조건문, 반복문, continue, break) / 함수 / 포인터 / 배열 / 클래스 / 예외처리 / 입출력 / 파일입출력
+4) 언어별 주요라이브러: STL
+5) 코딩컨벤션: Google Style
+```
 
-(알고리즘)
-- 코딩테스트에 필요한 Python 기본 메서드 및 내장함수 암기
-- [이것이 취업을 위한 코딩테스트다](https://www.youtube.com/playlist?list=PLRx0vPvlEmdAghTr5mXQxGpHjWqSz0dgC)로 알고리즘 학습
-- [Programmers](https://school.programmers.co.kr/learn/challenges?order=recent)에서 Lv3까지 순서대로 풀기
+(참고자료)
+- [C: C언어 코딩 도장](https://product.kyobobook.co.kr/detail/S000200764041)
+- [C: 모두의 코드](https://modoocode.com/231)
+- [C++: 명품 C++ Programming](https://product.kyobobook.co.kr/detail/S000217111234)
+- [C++: 모두의 코드](https://modoocode.com/135)
+- [Python: 점프 투 파이썬](https://wikidocs.net/book/1)
+- [Python: 코딩도장(파이썬)](https://dojang.io/course/view.php?id=7)
 
-(AI Basic)
-- [서울대 이준석 교수님의 강의](https://www.youtube.com/@LeeJoonseok)로 머신러닝 및 딥러닝 이론 학습
-- [데이터사이언스스쿨](https://datascienceschool.net/intro.html)로 기본이론 학습
-- 밑바닥부터 시작하는 딥러닝1-5 교재로 기본이론 학습
-- [Dive into Deep Learning](https://d2l.ai/)으로 이론 학습
-- [boostcourse](https://www.boostcourse.org/opencourse)에서 인공지능 기본기 학습
-- [Kaggle Learn](https://www.kaggle.com/)에서 기본 학습
+#### 알고리즘
+```
+1) 자료구조 학습: 배열 / 연결리스트 / 스택 / 큐 / 덱 / 해시(맵) / 셋 / 트리 / 그래프 / 힙 / RB-Tree / B-Tree / AVL-Tree
+2) 알고리즘 학습: 재귀 / 정렬 / 수학(소수, 순열, 조합, LCM, GCD) / 그리디 / 시뮬레이션 / 이분탐색 / DFS, BFS / 백트래킹 / Djkstra / 동적계획법
+4) 코딩테스트를 통해 알고리즘 활용 연습
+```
+
+(참고자료)
+- [윤성우의 열혈 자료구조](https://product.kyobobook.co.kr/detail/S000001589149)
+- [이것이 자료구조+알고리즘 with C 언어](https://product.kyobobook.co.kr/detail/S000061585515)
+- [Introduction To Algorithm](https://product.kyobobook.co.kr/detail/S000213683944)
+- [C++: 문제풀이로 완성하는 알고리즘+자료구조](https://product.kyobobook.co.kr/detail/S000214420933)
+- [C++: 바킹독의 실전 알고리즘](https://blog.encrypted.gg/category/%EA%B0%95%EC%A2%8C/%EC%8B%A4%EC%A0%84%20%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98?page=2)
+- [Python: 프로그래머스 코딩 테스트 문제 풀이 전략](https://product.kyobobook.co.kr/detail/S000200927968)
+- [Python: 이것이 코딩 테스트다](https://www.youtube.com/playlist?list=PLRx0vPvlEmdAghTr5mXQxGpHjWqSz0dgC)
+- [JavaScript: 코딩 테스트 합격자 되기](https://product.kyobobook.co.kr/detail/S000213641007)
+- [Programmers](https://school.programmers.co.kr/learn/challenges?order=recent)
+- [Solved.ac(Baekjoon Online Judge)](https://solved.ac/en/class)
+- [SW Expert Academy](https://swexpertacademy.com/main/main.do)
+
+
+#### AI Basic
+```
+1) 밑바닥부터 시작하는 딥러닝 1-5까지 정독하기
+2) boostcourse에서 AI 기본 강의 듣기
+3) 이준석교수님(서울대)의 머신러닝 및 딥러닝 이론 학습
+4) Kaggle Learn에서 프로젝트를 위한 기본기 학습
+5) 목표를 설정하여 데이터를 수집, 분석하고 모델 개발 및 학습하며 프로젝트 진행하기
+```
+
+(참고자료)
+- 밑바닥부터 시작하는 딥러닝1-5
+- [boostcourse](https://www.boostcourse.org/opencourse)
+- [서울대 이준석 교수님의 강의](https://www.youtube.com/@LeeJoonseok)
+- [Kaggle Learn](https://www.kaggle.com/)
+- [Dive into Deep Learning](https://d2l.ai/)
 - [AI-Hub](https://www.aihub.or.kr/)
 - [DACON](https://dacon.io/)
 - [Machine Learning](https://developers.google.com/machine-learning/crash-course)
 
 
-(데이터엔지니어링)
-- []()
+#### 데이터엔지니어링
+```
+```
 
-(Computer Vision)
+(참고자료)
+- [데이터사이언스스쿨](https://datascienceschool.net/intro.html)
+- []
+
+#### Computer Vision
+```
+```
+
+(참고자료)
 - [서울대 이준석 교수님의 강의](https://www.youtube.com/@LeeJoonseok)로 컴퓨터 비전 학습
 - [papers with code -> Huggingface Daily Papers](https://huggingface.co/papers)에서 모델 찾아 학습하기
+- [꼼꼼한 딥러닝 논문 리뷰와 코드 실습](https://www.youtube.com/playlist?list=PLRx0vPvlEmdADpce8aoBhNnDaaHQN1Typ)
 
-(NLP)
-- []()
+#### NLP
+```
+```
 
-(Recommender System)
+(참고자료)
+- [딥러닝을 이용한 자연어 처리 입문](https://wikidocs.net/book/2155)
+- [딥러닝 파이토치 교과서 - 입문부터 LLM 파인튜닝까지](https://wikidocs.net/book/2788)
+
+#### Recommender System
+```
+```
+
+(참고자료)
 - []()
 
 ## 점수기록
