--- a/cogito30/2025/202508.md
+++ b/cogito30/2025/202508.md
@@ -15,9 +15,9 @@
 08.25 [ ] | 08.26 [ ] | 08.27 [ ] | 08.28 [ ] | 08.29 [ ] | 08.30 [!] | 08.31 [!]
 
 - [ ] 1주차: Part2(Unit03-Unit06)
-- [ ] 2주차: Part3(Unit07-Unit10)
-- [ ] 3주차: Part4(Unit11-Unit14)
-- [ ] 4주차: ETS ACTUA TEST(Part1-Part4)
+- [ ] 2주차: Part3(Unit07-Unit10) -> 해커스토익 기출 보카(Day01-Day03)
+- [ ] 3주차: Part4(Unit11-Unit14 )-> 해커스토익 기출 보카(Day04-Day08)
+- [ ] 4주차: ETS ACTUA TEST(Part1-Part4) -> -> 해커스토익 기출 보카(Day09-Day12)
 
 [기간: 08.04-08.31]
 - 목표: 김영한의 스프링 핵심원리 / 이것이 백엔드 개발이다 / boostcourse(풀스택)
