--- a/cogito30/2025/202509.md
+++ b/cogito30/2025/202509.md
@@ -14,10 +14,10 @@
 | 09.15 [ ] | 09.16 [ ] | 09.17 [ ] | 09.18 [ ] | 09.19 [ ] | 09.20 [!] | 09.21 [!] | 
 | 09.22 [ ] | 09.23 [ ] | 09.24 [ ] | 09.25 [ ] | 09.26 [ ] | 09.27 [!] | 09.28 [!] | 
 
-- [ ] 1주차: Part7(Unit17-Unit20)
-- [ ] 2주차: Part5&6(Unit01-Unit10)
-- [ ] 3주차: Part5&6(Unit11-Unit16)
-- [ ] 4주차: ETS ACTUAL TEST(Part5-Part7)
+- [ ] 1주차: Part7(Unit17-Unit20) && Part5&6(Unit01-Unit10)
+- [ ] 2주차: Part5&6(Unit11-Unit16) && ETS ACTUAL TEST(Part5-Part7)
+- [ ] 3주차: 해커스토익 기출 보카(Day13-Day16)
+- [ ] 4주차: 해커스토익 기출 보카(Day17-Day20)
 
 ## 주중
 [기간: 09.01-09.28]
